# cpplib

./: CMakePresets.json  readme.md
db/: CMakeLists.txt  logger.cpp
io/: CMakeLists.txt  tiff_io.cpp  tiff_io.h
test/: CMakeLists.txt  test_compare.cpp  test_tiff_io.cpp
util/: image_data.h
